apps/hass/vernemq/manifests/tcproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/tcproute_v1alpha2.json
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: mqtt
  namespace: hass
spec:
  parentRefs:
  - name: envoy-gateway
    namespace: default
    sectionName: mqtt
  rules:
  - backendRefs:
    - name: vernemq-headless
      namespace: hass
      port: 1883
